[gd_scene load_steps=8 format=3 uid="uid://y5gngggrc4xo"]

[ext_resource type="Script" path="res://music.gd" id="1_qew7q"]
[ext_resource type="AudioStream" uid="uid://dbp1gpd7o6pvd" path="res://background-childrens-music-for-video-old-macdonald-had-a-farm-34-sec-188184.mp3" id="2_enjud"]
[ext_resource type="AudioStream" uid="uid://ddhnu4een3dwl" path="res://kitty-meow-85182.mp3" id="2_k7h2y"]
[ext_resource type="AudioStream" uid="uid://cl3kuk6yqt3ou" path="res://single-dog-bark-king-charles-spaniel-41366.mp3" id="3_b6loa"]
[ext_resource type="AudioStream" uid="uid://dxrp1382ykthy" path="res://sheep-bleating-223324.mp3" id="4_j8x1m"]
[ext_resource type="AudioStream" uid="uid://gbvfcfq5nnff" path="res://078921_cow-38460.mp3" id="5_xv86b"]
[ext_resource type="PackedScene" uid="uid://bxw43g3hyxkn2" path="res://h_slider.tscn" id="7_xfmx3"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_qew7q")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="OldMacDonald" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_enjud")
autoplay = true
bus = &"Music"

[node name="Button" type="Button" parent="."]
offset_left = -323.0
offset_top = 109.0
offset_right = -171.0
offset_bottom = 172.0
theme_override_font_sizes/font_size = 40
text = "Meow
"
metadata/_edit_use_anchors_ = true

[node name="Cat Meow" type="AudioStreamPlayer2D" parent="."]
position = Vector2(227, 109)
stream = ExtResource("2_k7h2y")
bus = &"AnimalSounds"

[node name="Button2" type="Button" parent="."]
offset_left = -160.0
offset_top = 109.0
offset_right = -6.0
offset_bottom = 172.0
theme_override_font_sizes/font_size = 40
text = "Woof"
metadata/_edit_use_anchors_ = true

[node name="Woof" type="AudioStreamPlayer2D" parent="."]
position = Vector2(112, -78)
stream = ExtResource("3_b6loa")
bus = &"AnimalSounds"

[node name="Button3" type="Button" parent="."]
offset_left = 7.0
offset_top = 109.0
offset_right = 159.0
offset_bottom = 172.0
theme_override_font_sizes/font_size = 40
text = "Baa"
metadata/_edit_use_anchors_ = true

[node name="Baa" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_j8x1m")
bus = &"AnimalSounds"

[node name="Button4" type="Button" parent="."]
offset_left = 172.0
offset_top = 109.0
offset_right = 326.0
offset_bottom = 172.0
theme_override_font_sizes/font_size = 40
text = "Moo"
metadata/_edit_use_anchors_ = true

[node name="Moo" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_xv86b")
bus = &"AnimalSounds"

[node name="HSlider" parent="." instance=ExtResource("7_xfmx3")]
offset_left = 335.0
offset_top = 223.0
offset_right = 561.0
offset_bottom = 250.0
max_value = 2.0
bus_name = "AnimalSounds"

[node name="Label" type="Label" parent="HSlider"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.099
anchor_top = 0.05
anchor_right = 0.099
anchor_bottom = 0.05
offset_left = 61.626
offset_top = -26.35
offset_right = 118.626
offset_bottom = -3.35
text = "Sounds"

[node name="HSlider2" parent="." instance=ExtResource("7_xfmx3")]
offset_left = 334.0
offset_top = 288.0
offset_right = 559.0
offset_bottom = 304.0
bus_name = "Music"

[node name="Label" type="Label" parent="HSlider2"]
layout_mode = 0
offset_left = 88.0
offset_top = -24.0
offset_right = 134.0
offset_bottom = -1.0
text = "Music
"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_button_4_pressed"]
